# HUSAI

./: .envrc  .gitignore  .pre-commit-config.yaml  ADVISOR_BRIEF.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS.md  AUDIT.md  BASIS_AMBIGUITY_DISCOVERY.md  BLOG_OUTLINE.md  BUGS.md  CANONICAL_DOCS.md  CLAUDE_CODE_COLLABORATION.md  COMPREHENSIVE_RESEARCH_SUMMARY.md  COMPREHENSIVE_REVIEW.md  COMPREHENSIVE_STRATEGIC_ANALYSIS.md  CONTRIBUTING.md  CRITICAL_ANALYSIS.md  CRITICAL_PATH.md  CURRENT_STATUS_AND_STUDY_GUIDE.md  CYCLE10_EXTERNAL_RECOVERY_PLAN.md  CYCLE4_FINAL_REFLECTIVE_REVIEW.md  CYCLE4_HIGH_IMPACT_EXECUTION_PLAN.md  CYCLE7_PARETO_PLAN.md  CYCLE8_ROBUST_PLAN.md  CYCLE9_NOVELTY_PLAN.md  EVIDENCE_STATUS.md  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_FINAL.md  EXEC_SUMMARY_FINAL.md  EXEC_SUMMARY_TASK_GENERALIZATION.md  EXPERIMENT_LOG.md  EXPERIMENT_PLAN.md  FINAL_BLOG.md  FINAL_PAPER.md  FINAL_READINESS_REVIEW.md  HIGH_IMPACT_FOLLOWUPS_REPORT.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  LEARNING_PATH.md  LICENSE  (+31 more)
.github/workflows/: ci.yml
archive/experimental_scripts/: diagnose_fourier.py  fix_explained_variance.py  investigate_algorithm.py  investigate_algorithm_detailed.py  investigate_algorithm_safe.py  investigate_layer0_anomaly.py  verify_layer0_pwmcc.py  visualize_algorithm_findings.py
archive/project_docs_2026_02/: CONTRIBUTING.md  CYCLE10_EXTERNAL_RECOVERY_PLAN.md  CYCLE5_EXTERNAL_PUSH_REFLECTIVE_REVIEW.md  CYCLE9_NOVELTY_PLAN.md  FINAL_READINESS_REVIEW.md  LEARNING_PATH.md  PHASE0_SUBAGENT_REPORTS.md  PHASE0_SUBAGENT_REPORTS_20260220.md  PROJECT_STUDY_GUIDE.md  PROPOSAL_COMPLETENESS_REVIEW.md
archive/session_notes/: ACTION_PLAN.md  AUDIT_FINDINGS.md  CITATIONS_AND_TEMPLATES.md  COMPREHENSIVE_SUMMARY.md  CRITICAL_FINDING.md  CRITICAL_FINDINGS.md  EOD_SUMMARY.md  EXECUTION_SUMMARY.md  EXPERIMENTAL_DESIGN.md  FEL_PAPER_ANALYSIS.md  FIGURE_SPECIFICATIONS.md  FINDINGS_SYNTHESIS.md  LAYER0_DIAGNOSIS.md  METHODOLOGY_VALIDATION_RESULTS.md  PHASE_STATUS.md  POSITION_PAPER_ANALYSIS.md  README_SAE_RESEARCH.md  REVISED_NEXT_STEPS.md  SECOND_AUDIT_FINDINGS.md  STABILITY_AWARE_SAE_RESULTS.md  TOMORROW.md  ULTRATHINK_COMPLETE.md  ULTRATHINK_SUMMARY.md
configs/: README.md
configs/examples/: baseline_relu.yaml  batchtopk_32x.yaml  topk_16x.yaml
configs/sae/: relu_8x.yaml  topk_8x_k32.yaml
docs/: CYCLE4_LITERATURE_ACTIONS.md  FOURIER_METHODOLOGY_COMPARISON.md  IDENTIFIABILITY_ANALYSIS.md  VERIFIED_FINDINGS_FOR_PAPER.md  config-system-summary.md
docs/00-Foundations/: literature-review.md  mission.md
docs/02-Product/: QUICK_REFERENCE.md  SAE_COMPREHENSIVE_GUIDE.md  modular-arithmetic-dataset.md
docs/04-Execution/: EXPERIMENT_PLAN_2026_02_20.md  setup-guide.md  (+1 more)
examples/: config_usage.py
figures/: FIGURE_VERIFICATION.md  summary_statistics.md  table1_statistics.json  table1_statistics.md
notebooks/: llm_sae_stability_colab.ipynb  llm_sae_stability_comprehensive.ipynb  modular_arithmetic_example.py
paper/: FINAL_PAPER.md  sae_stability_paper.md
scripts/: alternative_stability_metrics.py  analyze_feature_stability.py  analyze_training_dynamics.py  comprehensive_statistical_analysis.py  cross_layer_validation.py  deep_layer0_analysis.py  diagnose_layer0.py  diagnose_recovery_paradox.py  extract_sae_metrics.py  generate_paper_figures.py  generate_updated_figures.py  hungarian_matching_analysis.py  intervention_validation.py  investigate_algorithm_simple.py  investigate_minimal.py  knockoff_feature_selection.py  monitor_sparse_experiment.py  proper_causal_ablation.py  pwmcc_sensitivity_analysis.py  sparse_ground_truth_experiment.py  statistical_comparison.py  synthetic_sparse_validation.py  task_generalization.py  test_knockoff_selection.py  test_sae_pipeline.py  train_baseline.py  train_expanded_seeds.py  train_multi_seed.sh  training_dynamics_analysis.py  transcoder_stability_experiment.py  validate_subspace_overlap.py  verify_random_baseline.py
src/: README.md
tests/: test_sae_pipeline.py
(+303 files in other folders)
